# Bilateral-Teleoperation-Wireless-Communication

./: .gitignore  README.md  send.cpp  send.hpp
Linux-Mac/: main.cpp  recieve.cpp
Linux-Mac/simple_implementation/: client  client.cpp  server  server.cpp
Windows/: main.cpp
basic_cmds/send/: CMakeLists.txt  send.cpp
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp
